# rust-proj

./: Cargo.toml  Settings.toml
.github/workflows/: ci.yml
src/: agent.rs  core.rs  main.rs
