[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
# Асинхронний рантайм
tokio = { version = "1.35", features = ["full"] }
# Серіалізація даних
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Обробка помилок
thiserror = "1.0"
anyhow = "1.0"
# Логування (tracing)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Зовнішня конфігурація
config = "0.14"